<resources>
    <string name="app_name">Examen3</string>
    <string name="welcome">Bienvenid@</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="no_account_text">¿No tienes cuenta?</string>
    <string name="register_button">Registrar</string>
    <string name="signup_title">Crear Cuenta</string>
    <string name="register_action">Registrarse</string>
    <string name="player_label">Jugador</string>
    <string name="last_connection_label">Ultima conexión:</string>
</resources>